vm/grammar.leg
%{
#include <stdio.h>
#include "vl.h"
#define YYSTYPE OBJ
#define yyvm compiler->vm

static char *charbuf;
static VlCompiler *compiler;

#define YY_INPUT(buf, result, max_size) { \
  int yyc; \
  if (charbuf && *charbuf != '\0' && charbuf != NULL) \
     yyc = *charbuf++; \
  else if (charbuf == NULL) \
     yyc = getchar(); \
  else \
     yyc = EOF; \
  result = (EOF == yyc) ? 0 : (*(buf) = yyc, 1); \
}

%}

Root = s:Stmts EOF { PUSH_NODE(s, NODE(RETURN, 0)); compiler->node = s }

Stmts = SEP*
        - head:Stmt Comment?            { head = NODES(head) }
        ( SEP - tail:Stmt Comment?      { PUSH_NODE(head, tail) }
        | SEP - Comment
        )* SEP?                         { $$ = head }
      | SEP+                            { $$ = VlArray_new2(0) }

Stmt = Assign
     | BinOp
     | Call
     | Value

Value  = v:NUMBER               { $$ = NODE(VALUE, v) }
       | v:CONST                { $$ = NODE(CONST, v); }
       | '(' - Stmt - ')'

Assign = name:ID - ASSIGN - val:Stmt { $$ = NODE2(ASSIGN, name, val) }
       | name:CONST - ASSIGN - val:Stmt { $$ = NODE2(SETCONST, name, val) }

Call   = msg:ID { $$ = NODE(INVOKE, msg) }
       | msg:CONST { $$ = NODE(GETCONST, msg) }

BinOp  = ( rcv:Call | rcv:Value )
       - 
       ( '+' - arg:Stmt  { $$ = NODE2(ADD, rcv, arg) }
       | '-' - arg:Stmt  { $$ = NODE2(SUBTRACT, rcv, arg) }
       )


Comment = - '#' (!EOL .)*

NAME   = [a-zA-Z0-9_]+
ID     = < [a-z_] NAME? ( '!' | '?' )? > { $$ = VlSymbol_new(yyvm, yytext); }
CONST  = < [A-Z] NAME? > { $$ = VlSymbol_new(yyvm, yytext); }
NUMBER = < [0-9]+ > { $$ = atoi(yytext); }
ASSIGN = < '=' > &(!'=') { $$ = VlSymbol_new(yyvm, yytext); }

-      = [ \t]*
EOL    = ( '\n' | '\r\n' | '\r' )
SEP    = ( - (EOL | ';') )+
EOF    = !.

%%

void VlBlock_compile(char *code, int debug) {
     charbuf = code;
     
     compiler = VlCompiler_new(VlVM_new());
     compiler->vm->debug = debug;
     
     if (code == NULL) {
        while(yyparse()) {
           printf("> ");
        };
     } else {
          if (!yyparse()) {
             //yyerror();
          }
     }

     unsigned int status = VlCompiler_compile(compiler);
     if (status == 0) {
       VlVM_run(compiler);
     }

     VlVM_destroy(compiler->vm);
}

/*int main()
{
        printf("> ");
        while (yyparse()) {
              printf("> ");
        }
        return 0;
}*/
