vm/grammar.c
/* A recursive-descent parser generated by peg 0.1.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 16

#include <stdio.h>
#include "vl.h"
#define YYSTYPE OBJ

static char *charbuf;

#define YY_INPUT(buf, result, max_size) { \
  int yyc; \
  if (charbuf && *charbuf != '\0' && charbuf != NULL) \
     yyc = *charbuf++; \
  else if (charbuf == NULL) \
     yyc = getchar(); \
  else \
     yyc = EOF; \
  result = (EOF == yyc) ? 0 : (*(buf) = yyc, 1); \
}

VlVM *vm;


#ifndef YY_VARIABLE
#define YY_VARIABLE(T)	static T
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yybegin= yypos, 1)
#endif
#ifndef YY_END
#define YY_END		( yyend= yypos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef void (*yyaction)(char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

YY_VARIABLE(char *   ) yybuf= 0;
YY_VARIABLE(int	     ) yybuflen= 0;
YY_VARIABLE(int	     ) yypos= 0;
YY_VARIABLE(int	     ) yylimit= 0;
YY_VARIABLE(char *   ) yytext= 0;
YY_VARIABLE(int	     ) yytextlen= 0;
YY_VARIABLE(int	     ) yybegin= 0;
YY_VARIABLE(int	     ) yyend= 0;
YY_VARIABLE(int	     ) yytextmax= 0;
YY_VARIABLE(yythunk *) yythunks= 0;
YY_VARIABLE(int	     ) yythunkslen= 0;
YY_VARIABLE(int      ) yythunkpos= 0;
YY_VARIABLE(YYSTYPE  ) yy;
YY_VARIABLE(YYSTYPE *) yyval= 0;
YY_VARIABLE(YYSTYPE *) yyvals= 0;
YY_VARIABLE(int      ) yyvalslen= 0;

YY_LOCAL(int) yyrefill(void)
{
  int yyn;
  while (yybuflen - yypos < 512)
    {
      yybuflen *= 2;
      yybuf= realloc(yybuf, yybuflen);
    }
  YY_INPUT((yybuf + yypos), yyn, (yybuflen - yypos));
  if (!yyn) return 0;
  yylimit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(void)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  ++yypos;
  return 1;
}

YY_LOCAL(int) yymatchChar(int c)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  if (yybuf[yypos] == c)
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, yybuf+yypos));
  return 0;
}

YY_LOCAL(int) yymatchString(char *s)
{
  int yysav= yypos;
  while (*s)
    {
      if (yypos >= yylimit && !yyrefill()) return 0;
      if (yybuf[yypos] != *s)
        {
          yypos= yysav;
          return 0;
        }
      ++s;
      ++yypos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(unsigned char *bits)
{
  int c;
  if (yypos >= yylimit && !yyrefill()) return 0;
  c= yybuf[yypos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yybuf+yypos));
  return 0;
}

YY_LOCAL(void) yyDo(yyaction action, int begin, int end)
{
  while (yythunkpos >= yythunkslen)
    {
      yythunkslen *= 2;
      yythunks= realloc(yythunks, sizeof(yythunk) * yythunkslen);
    }
  yythunks[yythunkpos].begin=  begin;
  yythunks[yythunkpos].end=    end;
  yythunks[yythunkpos].action= action;
  ++yythunkpos;
}

YY_LOCAL(int) yyText(int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yytextlen < (yyleng - 1))
	{
	  yytextlen *= 2;
	  yytext= realloc(yytext, yytextlen);
	}
      memcpy(yytext, yybuf + begin, yyleng);
    }
  yytext[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(void)
{
  int pos;
  for (pos= 0;  pos < yythunkpos;  ++pos)
    {
      yythunk *thunk= &yythunks[pos];
      int yyleng= thunk->end ? yyText(thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yytext));
      thunk->action(yytext, yyleng);
    }
  yythunkpos= 0;
}

YY_LOCAL(void) yyCommit()
{
  if ((yylimit -= yypos))
    {
      memmove(yybuf, yybuf + yypos, yylimit);
    }
  yybegin -= yypos;
  yyend -= yypos;
  yypos= yythunkpos= 0;
}

YY_LOCAL(int) yyAccept(int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone();
      yyCommit();
    }
  return 1;
}

YY_LOCAL(void) yyPush(char *text, int count)	{ yyval += count; }
YY_LOCAL(void) yyPop(char *text, int count)	{ yyval -= count; }
YY_LOCAL(void) yySet(char *text, int count)	{ yyval[count]= yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yythunkpos0)

YY_RULE(int) yy_NAME(); /* 16 */
YY_RULE(int) yy_EOL(); /* 15 */
YY_RULE(int) yy_ASSIGN(); /* 14 */
YY_RULE(int) yy_ID(); /* 13 */
YY_RULE(int) yy_CONST(); /* 12 */
YY_RULE(int) yy_NUMBER(); /* 11 */
YY_RULE(int) yy_Value(); /* 10 */
YY_RULE(int) yy_Call(); /* 9 */
YY_RULE(int) yy_Assign(); /* 8 */
YY_RULE(int) yy_Comment(); /* 7 */
YY_RULE(int) yy_Stmt(); /* 6 */
YY_RULE(int) yy__(); /* 5 */
YY_RULE(int) yy_SEP(); /* 4 */
YY_RULE(int) yy_EOF(); /* 3 */
YY_RULE(int) yy_Stmts(); /* 2 */
YY_RULE(int) yy_Root(); /* 1 */

YY_ACTION(void) yy_1_ASSIGN(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_ASSIGN\n"));
   yy = VlSymbol_new(yytext); ;
}
YY_ACTION(void) yy_1_NUMBER(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_NUMBER\n"));
   printf("CREATING NUMBER %d\n", atoi(yytext)); yy = atoi(yytext); ;
}
YY_ACTION(void) yy_1_CONST(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_CONST\n"));
   yy = VlSymbol_new(yytext); ;
}
YY_ACTION(void) yy_1_ID(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_ID\n"));
   yy = VlSymbol_new(yytext); ;
}
YY_ACTION(void) yy_2_Call(char *yytext, int yyleng)
{
#define msg yyval[-1]
  yyprintf((stderr, "do yy_2_Call\n"));
   yy = NODE(GETCONST, msg) ;
#undef msg
}
YY_ACTION(void) yy_1_Call(char *yytext, int yyleng)
{
#define msg yyval[-1]
  yyprintf((stderr, "do yy_1_Call\n"));
   yy = NODE(SEND, msg) ;
#undef msg
}
YY_ACTION(void) yy_2_Assign(char *yytext, int yyleng)
{
#define val yyval[-1]
#define name yyval[-2]
  yyprintf((stderr, "do yy_2_Assign\n"));
   yy = NODE2(SETCONST, name, val) ;
#undef val
#undef name
}
YY_ACTION(void) yy_1_Assign(char *yytext, int yyleng)
{
#define val yyval[-1]
#define name yyval[-2]
  yyprintf((stderr, "do yy_1_Assign\n"));
   yy = NODE2(ASSIGN, name, val) ;
#undef val
#undef name
}
YY_ACTION(void) yy_2_Value(char *yytext, int yyleng)
{
#define v yyval[-1]
  yyprintf((stderr, "do yy_2_Value\n"));
   yy = NODE(CONST, v); ;
#undef v
}
YY_ACTION(void) yy_1_Value(char *yytext, int yyleng)
{
#define v yyval[-1]
  yyprintf((stderr, "do yy_1_Value\n"));
   yy = NODE(VALUE, v) ;
#undef v
}
YY_ACTION(void) yy_4_Stmts(char *yytext, int yyleng)
{
#define tail yyval[-1]
#define head yyval[-2]
  yyprintf((stderr, "do yy_4_Stmts\n"));
   ;
#undef tail
#undef head
}
YY_ACTION(void) yy_3_Stmts(char *yytext, int yyleng)
{
#define tail yyval[-1]
#define head yyval[-2]
  yyprintf((stderr, "do yy_3_Stmts\n"));
   ;
#undef tail
#undef head
}
YY_ACTION(void) yy_2_Stmts(char *yytext, int yyleng)
{
#define tail yyval[-1]
#define head yyval[-2]
  yyprintf((stderr, "do yy_2_Stmts\n"));
   COMPILE(vm, tail); ;
#undef tail
#undef head
}
YY_ACTION(void) yy_1_Stmts(char *yytext, int yyleng)
{
#define tail yyval[-1]
#define head yyval[-2]
  yyprintf((stderr, "do yy_1_Stmts\n"));
   COMPILE(vm, head) ;
#undef tail
#undef head
}
YY_ACTION(void) yy_1_Root(char *yytext, int yyleng)
{
#define s yyval[-1]
  yyprintf((stderr, "do yy_1_Root\n"));
   ;
#undef s
}

YY_RULE(int) yy_NAME()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "NAME"));  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l1;
  l2:;	
  {  int yypos3= yypos, yythunkpos3= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l3;  goto l2;
  l3:;	  yypos= yypos3; yythunkpos= yythunkpos3;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "NAME", yybuf+yypos));
  return 1;
  l1:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "NAME", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_EOL()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "EOL"));
  {  int yypos5= yypos, yythunkpos5= yythunkpos;  if (!yymatchChar('\n')) goto l6;  goto l5;
  l6:;	  yypos= yypos5; yythunkpos= yythunkpos5;  if (!yymatchString("\r\n")) goto l7;  goto l5;
  l7:;	  yypos= yypos5; yythunkpos= yythunkpos5;  if (!yymatchChar('\r')) goto l4;
  }
  l5:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "EOL", yybuf+yypos));
  return 1;
  l4:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EOL", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_ASSIGN()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "ASSIGN"));  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l8;  if (!yymatchChar('=')) goto l8;  yyText(yybegin, yyend);  if (!(YY_END)) goto l8;
  {  int yypos9= yypos, yythunkpos9= yythunkpos;
  {  int yypos10= yypos, yythunkpos10= yythunkpos;  if (!yymatchChar('=')) goto l10;  goto l8;
  l10:;	  yypos= yypos10; yythunkpos= yythunkpos10;
  }  yypos= yypos9; yythunkpos= yythunkpos9;
  }  yyDo(yy_1_ASSIGN, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "ASSIGN", yybuf+yypos));
  return 1;
  l8:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "ASSIGN", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_ID()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "ID"));  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l11;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\000\000\000\000\000\200\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l11;
  {  int yypos12= yypos, yythunkpos12= yythunkpos;  if (!yy_NAME()) goto l12;  goto l13;
  l12:;	  yypos= yypos12; yythunkpos= yythunkpos12;
  }
  l13:;	
  {  int yypos14= yypos, yythunkpos14= yythunkpos;
  {  int yypos16= yypos, yythunkpos16= yythunkpos;  if (!yymatchChar('!')) goto l17;  goto l16;
  l17:;	  yypos= yypos16; yythunkpos= yythunkpos16;  if (!yymatchChar('?')) goto l14;
  }
  l16:;	  goto l15;
  l14:;	  yypos= yypos14; yythunkpos= yythunkpos14;
  }
  l15:;	  yyText(yybegin, yyend);  if (!(YY_END)) goto l11;  yyDo(yy_1_ID, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "ID", yybuf+yypos));
  return 1;
  l11:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "ID", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_CONST()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "CONST"));  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l18;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\000\000\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l18;
  {  int yypos19= yypos, yythunkpos19= yythunkpos;  if (!yy_NAME()) goto l19;  goto l20;
  l19:;	  yypos= yypos19; yythunkpos= yythunkpos19;
  }
  l20:;	  yyText(yybegin, yyend);  if (!(YY_END)) goto l18;  yyDo(yy_1_CONST, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "CONST", yybuf+yypos));
  return 1;
  l18:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "CONST", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_NUMBER()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "NUMBER"));  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l21;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l21;
  l22:;	
  {  int yypos23= yypos, yythunkpos23= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l23;  goto l22;
  l23:;	  yypos= yypos23; yythunkpos= yythunkpos23;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l21;  yyDo(yy_1_NUMBER, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "NUMBER", yybuf+yypos));
  return 1;
  l21:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "NUMBER", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Value()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Value"));
  {  int yypos25= yypos, yythunkpos25= yythunkpos;  if (!yy_NUMBER()) goto l26;  yyDo(yySet, -1, 0);  yyDo(yy_1_Value, yybegin, yyend);  goto l25;
  l26:;	  yypos= yypos25; yythunkpos= yythunkpos25;  if (!yy_CONST()) goto l24;  yyDo(yySet, -1, 0);  yyDo(yy_2_Value, yybegin, yyend);
  }
  l25:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Value", yybuf+yypos));  yyDo(yyPop, 1, 0);
  return 1;
  l24:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Value", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Call()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Call"));
  {  int yypos28= yypos, yythunkpos28= yythunkpos;  if (!yy_ID()) goto l29;  yyDo(yySet, -1, 0);  yyDo(yy_1_Call, yybegin, yyend);  goto l28;
  l29:;	  yypos= yypos28; yythunkpos= yythunkpos28;  if (!yy_CONST()) goto l27;  yyDo(yySet, -1, 0);  yyDo(yy_2_Call, yybegin, yyend);
  }
  l28:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Call", yybuf+yypos));  yyDo(yyPop, 1, 0);
  return 1;
  l27:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Call", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Assign()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 2, 0);
  yyprintf((stderr, "%s\n", "Assign"));
  {  int yypos31= yypos, yythunkpos31= yythunkpos;  if (!yy_ID()) goto l32;  yyDo(yySet, -2, 0);  if (!yy__()) goto l32;  if (!yy_ASSIGN()) goto l32;  if (!yy__()) goto l32;  if (!yy_Stmt()) goto l32;  yyDo(yySet, -1, 0);  yyDo(yy_1_Assign, yybegin, yyend);  goto l31;
  l32:;	  yypos= yypos31; yythunkpos= yythunkpos31;  if (!yy_CONST()) goto l30;  yyDo(yySet, -2, 0);  if (!yy__()) goto l30;  if (!yy_ASSIGN()) goto l30;  if (!yy__()) goto l30;  if (!yy_Stmt()) goto l30;  yyDo(yySet, -1, 0);  yyDo(yy_2_Assign, yybegin, yyend);
  }
  l31:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Assign", yybuf+yypos));  yyDo(yyPop, 2, 0);
  return 1;
  l30:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Assign", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Comment()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "Comment"));  if (!yy__()) goto l33;  if (!yymatchChar('#')) goto l33;
  l34:;	
  {  int yypos35= yypos, yythunkpos35= yythunkpos;
  {  int yypos36= yypos, yythunkpos36= yythunkpos;  if (!yy_EOL()) goto l36;  goto l35;
  l36:;	  yypos= yypos36; yythunkpos= yythunkpos36;
  }  if (!yymatchDot()) goto l35;  goto l34;
  l35:;	  yypos= yypos35; yythunkpos= yythunkpos35;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "Comment", yybuf+yypos));
  return 1;
  l33:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Comment", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Stmt()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "Stmt"));
  {  int yypos38= yypos, yythunkpos38= yythunkpos;  if (!yy_Assign()) goto l39;  goto l38;
  l39:;	  yypos= yypos38; yythunkpos= yythunkpos38;  if (!yy_Call()) goto l40;  goto l38;
  l40:;	  yypos= yypos38; yythunkpos= yythunkpos38;  if (!yy_Value()) goto l37;
  }
  l38:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Stmt", yybuf+yypos));
  return 1;
  l37:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Stmt", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy__()
{
  yyprintf((stderr, "%s\n", "_"));
  l42:;	
  {  int yypos43= yypos, yythunkpos43= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\002\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l43;  goto l42;
  l43:;	  yypos= yypos43; yythunkpos= yythunkpos43;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "_", yybuf+yypos));
  return 1;
}
YY_RULE(int) yy_SEP()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "SEP"));  if (!yy__()) goto l44;
  {  int yypos47= yypos, yythunkpos47= yythunkpos;  if (!yy_EOL()) goto l48;  goto l47;
  l48:;	  yypos= yypos47; yythunkpos= yythunkpos47;  if (!yymatchChar(';')) goto l44;
  }
  l47:;	
  l45:;	
  {  int yypos46= yypos, yythunkpos46= yythunkpos;  if (!yy__()) goto l46;
  {  int yypos49= yypos, yythunkpos49= yythunkpos;  if (!yy_EOL()) goto l50;  goto l49;
  l50:;	  yypos= yypos49; yythunkpos= yythunkpos49;  if (!yymatchChar(';')) goto l46;
  }
  l49:;	  goto l45;
  l46:;	  yypos= yypos46; yythunkpos= yythunkpos46;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "SEP", yybuf+yypos));
  return 1;
  l44:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "SEP", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_EOF()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "EOF"));
  {  int yypos52= yypos, yythunkpos52= yythunkpos;  if (!yymatchDot()) goto l52;  goto l51;
  l52:;	  yypos= yypos52; yythunkpos= yythunkpos52;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "EOF", yybuf+yypos));
  return 1;
  l51:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EOF", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Stmts()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 2, 0);
  yyprintf((stderr, "%s\n", "Stmts"));
  {  int yypos54= yypos, yythunkpos54= yythunkpos;
  l56:;	
  {  int yypos57= yypos, yythunkpos57= yythunkpos;  if (!yy_SEP()) goto l57;  goto l56;
  l57:;	  yypos= yypos57; yythunkpos= yythunkpos57;
  }  if (!yy__()) goto l55;  if (!yy_Stmt()) goto l55;  yyDo(yySet, -2, 0);
  {  int yypos58= yypos, yythunkpos58= yythunkpos;  if (!yy_Comment()) goto l58;  goto l59;
  l58:;	  yypos= yypos58; yythunkpos= yythunkpos58;
  }
  l59:;	  yyDo(yy_1_Stmts, yybegin, yyend);
  l60:;	
  {  int yypos61= yypos, yythunkpos61= yythunkpos;
  {  int yypos62= yypos, yythunkpos62= yythunkpos;  if (!yy_SEP()) goto l63;  if (!yy__()) goto l63;  if (!yy_Stmt()) goto l63;  yyDo(yySet, -1, 0);
  {  int yypos64= yypos, yythunkpos64= yythunkpos;  if (!yy_Comment()) goto l64;  goto l65;
  l64:;	  yypos= yypos64; yythunkpos= yythunkpos64;
  }
  l65:;	  yyDo(yy_2_Stmts, yybegin, yyend);  goto l62;
  l63:;	  yypos= yypos62; yythunkpos= yythunkpos62;  if (!yy_SEP()) goto l61;  if (!yy__()) goto l61;  if (!yy_Comment()) goto l61;
  }
  l62:;	  goto l60;
  l61:;	  yypos= yypos61; yythunkpos= yythunkpos61;
  }
  {  int yypos66= yypos, yythunkpos66= yythunkpos;  if (!yy_SEP()) goto l66;  goto l67;
  l66:;	  yypos= yypos66; yythunkpos= yythunkpos66;
  }
  l67:;	  yyDo(yy_3_Stmts, yybegin, yyend);  goto l54;
  l55:;	  yypos= yypos54; yythunkpos= yythunkpos54;  if (!yy_SEP()) goto l53;
  l68:;	
  {  int yypos69= yypos, yythunkpos69= yythunkpos;  if (!yy_SEP()) goto l69;  goto l68;
  l69:;	  yypos= yypos69; yythunkpos= yythunkpos69;
  }  yyDo(yy_4_Stmts, yybegin, yyend);
  }
  l54:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "Stmts", yybuf+yypos));  yyDo(yyPop, 2, 0);
  return 1;
  l53:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Stmts", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Root()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Root"));  if (!yy_Stmts()) goto l70;  yyDo(yySet, -1, 0);  if (!yy_EOF()) goto l70;  yyDo(yy_1_Root, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "Root", yybuf+yypos));  yyDo(yyPop, 1, 0);
  return 1;
  l70:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Root", yybuf+yypos));
  return 0;
}

#ifndef YY_PART

typedef int (*yyrule)();

YY_PARSE(int) YYPARSEFROM(yyrule yystart)
{
  int yyok;
  if (!yybuflen)
    {
      yybuflen= 1024;
      yybuf= malloc(yybuflen);
      yytextlen= 1024;
      yytext= malloc(yytextlen);
      yythunkslen= 32;
      yythunks= malloc(sizeof(yythunk) * yythunkslen);
      yyvalslen= 32;
      yyvals= malloc(sizeof(YYSTYPE) * yyvalslen);
      yybegin= yyend= yypos= yylimit= yythunkpos= 0;
    }
  yybegin= yyend= yypos;
  yythunkpos= 0;
  yyval= yyvals;
  yyok= yystart();
  if (yyok) yyDone();
  yyCommit();
  return yyok;
  (void)yyrefill;
  (void)yymatchDot;
  (void)yymatchChar;
  (void)yymatchString;
  (void)yymatchClass;
  (void)yyDo;
  (void)yyText;
  (void)yyDone;
  (void)yyCommit;
  (void)yyAccept;
  (void)yyPush;
  (void)yyPop;
  (void)yySet;
  (void)yytextmax;
}

YY_PARSE(int) YYPARSE(void)
{
  return YYPARSEFROM(yy_Root);
}

#endif


void VlBlock_compile(char *code) {
     charbuf = code;
     
     if (code == NULL) {
        while(yyparse()) {
           printf("> ");
        };
     } else {
          if (!yyparse()) {
             //yyerror();
          }
     }
}

/*int main()
{
        printf("> ");
        while (yyparse()) {
              printf("> ");
        }
        return 0;
}*/

